# lifesheet-project

./: .env.example  .gitignore  Dockerfile  LICENCE  README.md  TODO.md  Terms and Conditions for Lifesheet.md  docker-compose-mongo-tools.yml  docker-compose-only-mongo-and-redis.yml  docker-compose-only-mongo.yml  docker-compose.yml  mongo-tools.Dockerfile  start-dev.sh
agents/cv-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.dev.md  README.md  apitest.js  pyproject.toml  setup.cfg
agents/cv-agent/src/app/: ai.py  main.py
agents/cv-agent/tests/: conftest.py  test_api.py
lifesheet/: .dockerignore  Dockerfile  README.md  cv-upload-app.tsx  docker-compose.yml  next.config.mjs  package.json
lifesheet-backend/: .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  dockerignore  package.json
lifesheet-backend/src/: bullboard.ts  constants.ts  index.ts  loadenv.ts
lifesheet-fe/: .prettierignore  .prettierrc  CODE_STYLE.md  TESTING.md  eslint.config.js  index.html  package.json  postcss.config.mjs  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
lifesheet-fe/.cursor/: terminal-setup.mdc
lifesheet-fe/docs/: server-stripe-implementation.md  stripe-integration-summary.md
lifesheet-fe/src/: App.css  App.tsx  constants.ts  keycloak.ts  main.tsx
nginx-conf/: default.conf
scripts/: remote-deploy  remote-deploy-dev.sh  remote-deploy-prod.sh  remote-deploy.sh  remote-mongo-tunnel.sh  self-deploy-dev.sh  self-deploy-prod.sh  self-deploy.sh
(+135 files in other folders)
